	+ Added MouseEventArgs for VertexDoubleClick event to be able to correctly block click event when you're dragging vertex and open dialog window at once
	+ Fixed id autoresolve issue when calling GraphArea::GenerateAllEdges() after manual edge data compilation (thanks to Hannes Hasenauer)
	+ Fixed some METRO code not that hasn't been ported correctly
	+ Fixed an exception in ZoomControl caused by Ctrl + Alt + DblClick combination (thanks to persalmi)
	+ Fixed NaN result for FR algorithms calc (thanks to bleibold)
	+ Fixed edge bundling in the case when empty Control points are present that would sometimes cause exceptions.(thanks to bleibold)
	+ Fixed bindings to DefaultEdgePointer::Visibility property
	+ Fixed numerous event issues with graphX controls where events wasn't passed down the hierarchy tree
	+ Fixed edge label size on some template manipulations by adding additional update on label size change event. You can turn it off using EdgeLabelControl::UpdateLabelOnSizeChange property.
	+ Improved styles flexibility by working with dependency values instead of straight assignment in some places
	+ Improved random layout algorithm randomness by seeding new Guid hash which fixes some odd behavior in rare cases
	+ Improved overall graph cleaning in different areas allowing to easily clean graph data and fix potentional memory leaks
	+ Implemented edge cut logic for EdgePointer placed at edge 'source' to gain better visual quality like its 'target' counterpart
	+ Implemented many changes in algorithm base classes, mainly in AlgorithmLayoutBase: made VisitedGraph and VertexPositions props assignable externally
	+ Implemented RandomLayoutAlgorithms to derive from LayoutAlgorithmBase class
	+ Made many methods virtual/protected for easier derived classes customization
	+ Merged GraphArea code for WPF & METRO into the shared files
	+ Merged EdgeControl and VertexControl code for WPF & METRO into the shared files


BREAKING CHANGES: